--- a/assets/style.css
+++ b/assets/style.css
@@ -1,23 +1,5 @@
-.cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-    grid-gap: 15px;
+h1 {
+    font-weight: bold;
+    font-size: 25px;
+    text-decoration: underline;
 }
-
-.card {
-    background-color:black;
-    display: grid;
-    grid-template-rows: max-content 200px 1fr;
-    padding: 20px;
-    font-family: 'Cooper Black', Arial, sans-serif;
-    color: #ffffff;
-}
-
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
