Working drop down menus with all possible currencies

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,5 +5,25 @@ h1 {
 }
 
 .custbox {
-    width:30vw;
+    width:20vw;
+}
+
+.searchBox {
+    margin-top: 20px;
+}
+
+.custFav {
+    padding-top: 7px;
+    font-size: 25px;
+}
+
+.submitBtn {
+    background-color: #00d1b2;
+    border-style: none;
+    color: white;
+    width: 3.8vw;
+}
+
+.submitBtn:hover {
+    cursor: pointer;
 }
