the submit button was cut in half when in windowed browser. altered submit button to width in pixels rather than view width.

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,7 @@ h1 {
     background-color: #00d1b2;
     border-style: none;
     color: white;
-    width: 3.8vw;
+    width: 75px;
 }
 
 .submitBtn:hover {
