changed center of content

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+body {
+    text-align: center;
+    align-content: center;
+}
+
 h1 {
     font-weight: bold;
     font-size: 25px;
@@ -32,14 +37,14 @@ h1 {
     cursor: pointer;
 }
 
-.notification {
-    width: 450px;
-}
-
 .custInput {
     width:10vw;
 }
 
 .custSec {
     padding-bottom: 5px;
+}
+
+.custRatesContain {
+    width: 40vw;
 }
