--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,11 @@ h1 {
 }
 
 .custNav {
-    background-color: #b1e0ee;
+    background-color: #87a8b3;
+}
+
+.custHtml {
+    background-color: #e4ebee;
 }
 
 .custbox {
@@ -42,13 +46,10 @@ h1 {
 }
 
 .custSec {
-    padding-bottom: 5px;
+    padding-bottom: 0px;
 }
 
 .custRatesContain {
     width: 40vw;
 }
 
-.custBod {
-    background-color: #e4ebee;
-}
