--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,10 @@
+/* option {
+    color:white;
+    background-color:#2f3136;
+} */
+
 body {
+    /* background-color:#2f3136; */
     text-align: center;
     align-content: center;
 }
@@ -7,11 +13,12 @@ h1 {
     font-weight: bold;
     font-size: 25px;
     text-decoration: underline;
+    color:white;
 }
-
+/* 
 .custNav {
-    background-color: rgb(143, 229, 236);
-}
+    background-color: #2f3136;
+} */
 
 .custbox {
     width:20vw;
@@ -27,7 +34,7 @@ h1 {
 }
 
 .submitBtn {
-    background-color: #00d1b2;
+    background-color: #5865f2;
     border-style: none;
     color: white;
     width: 74px;
@@ -48,3 +55,13 @@ h1 {
 .custRatesContain {
     width: 40vw;
 }
+
+/* .notification {
+    color:white;
+    background-color:#5865f2;
+} */
+
+/* 
+.navbar-menu {
+    background-color:#2f3136;
+} */
