--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 .custNav {
-    background-color: #87a8b3;
+    background-color: #e4ebee;
 }
 
 .custHtml {
@@ -31,7 +31,7 @@ h1 {
 }
 
 .submitBtn {
-    background-color: #00d1b2;
+    background-color: #5865f2;
     border-style: none;
     color: white;
     width: 74px;
@@ -51,5 +51,9 @@ h1 {
 
 .custRatesContain {
     width: 40vw;
+}
+
+.ratesBox {
+    background-color: #5865f2;
 }
 
