--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,4 @@
-/* option {
-    color:white;
-    background-color:#2f3136;
-} */
-
 body {
-    /* background-color:#2f3136; */
     text-align: center;
     align-content: center;
 }
@@ -17,12 +11,12 @@ h1 {
 }
 
 .custNav {
-    background-color: #00d1b2;
+    background-color: #5865f2;
     padding: 15px;
 }
 
 .custHtml {
-    background-color: #e4ebee;
+    background-color: #36393f;
 }
 
 .custbox {
@@ -58,6 +52,26 @@ h1 {
 }
 
 .custRatesContain {
-    width: 40vw;
+    width: 15vw;
 }
 
+.notification {
+    color:white;
+    background-color:#5865f2;
+}
+
+.title {
+    color:white;
+}
+
+.navbar {
+    background-color: #36393f;
+}
+
+.navbar-item {
+    color:white;
+}
+
+.navbar-dropdown {
+    background-color: #36393f;
+}
