--- a/assets/style.css
+++ b/assets/style.css
@@ -7,14 +7,16 @@ h1 {
     font-weight: bold;
     font-size: 25px;
     text-decoration: underline;
+    color:white;
 }
 
 .custNav {
-    background-color: #87a8b3;
+    background-color: #5865f2;
+    padding: 15px;
 }
 
 .custHtml {
-    background-color: #e4ebee;
+    background-color: #36393f;
 }
 
 .custbox {
@@ -31,7 +33,7 @@ h1 {
 }
 
 .submitBtn {
-    background-color: #00d1b2;
+    background-color: #5865f2;
     border-style: none;
     color: white;
     width: 74px;
@@ -50,6 +52,26 @@ h1 {
 }
 
 .custRatesContain {
-    width: 40vw;
+    width: 15vw;
 }
 
+.notification {
+    color:white;
+    background-color:#5865f2;
+}
+
+.title {
+    color:white;
+}
+
+.navbar {
+    background-color: #36393f;
+}
+
+.navbar-item {
+    color:white;
+}
+
+.navbar-dropdown {
+    background-color: #36393f;
+}
