--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-body {
+.body {
     text-align: center;
     align-content: center;
 }
@@ -7,6 +7,7 @@ h1 {
     font-weight: bold;
     font-size: 25px;
     text-decoration: underline;
+    color: white
 }
 
 .custNav {
@@ -53,4 +54,3 @@ h1 {
 .custRatesContain {
     width: 40vw;
 }
-
