--- a/assets/style.css
+++ b/assets/style.css
@@ -38,7 +38,7 @@
     .custFav {
         padding-top: 7px;
         font-size: 25px;
-        color: rgb(247, 120, 52);
+        color: rgb(249, 5, 5);
     }
     
     /* sizing and coloring for the submit buttons */
@@ -56,7 +56,7 @@
     /* sizing and coloring of the Local Exchange Locations boxes      */
    
     .custTitle {
-        background-color: rgb(247, 247, 41);
+        background-color: white;
         margin-left: 35%;
         margin-right: 35%;
         border-radius: 5px;
@@ -85,7 +85,7 @@
     
     .notification {
         color:white; 
-        background-color: rgb(51, 188, 51); 
+        background-color: white; 
     }
     
     /* coloring for the title */
