--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,12 @@
         align-content: center;
     }
 
+    h1 {
+        font-weight: bold;
+        font-size: 25px;
+        text-decoration: underline;
+        color:white;
+    }    
     /* sizing and font for Current Exchange Rate Conveter title */
     h2 {
         font-weight: bold;
