--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@
     /* background image and sizing */
 
     .custHtml {
-        background-image: url("https://wallpapercave.com/wp/wp7860706.jpg");
+        background-image: url("./images/resolution.jpg");
         height: 100%;
         background-position: center;
         background-size: cover;
