--- a/assets/style.css
+++ b/assets/style.css
@@ -30,8 +30,10 @@
 
     .custHtml {
         background-image: url("./images/resolution.jpg");
-        height: 100%;
+        min-height: 500px;
+        background-attachment: fixed;
         background-position: center;
+        background-repeat: no-repeat;
         background-size: cover;
     }
     
